--- a/bio.html
+++ b/bio.html
@@ -7,7 +7,7 @@
 <head>
 <Title> Christopher Rackey’s Bio </title>
 <meta charset="utf-8" /> 
-<link href="rackeyassignment1stylesheet.css" rel="rackeystylesheet" />
+<link href="rackeyassignment1stylesheet.css" rel="stylesheet" />
 </head>
 
 <body>
