--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<Title> Christopher Rackey’s Bio </title>
+<title> Christopher Rackey’s Bio </title>
 <meta charset="utf-8" /> 
 <link href="rackeyassignment1stylesheet.css" rel="stylesheet" />
 </head>
