--- a/bio.html
+++ b/bio.html
@@ -4,7 +4,7 @@
 
 <head>
 <meta charset="utf-8" /> 
-<title> Christopher Rackey’s Bio </title>
+<title> Christopher Rackey Bio </title>
 <link href="rackeyassignment1stylesheet.css" rel="stylesheet" />
 </head>
 
